--- a/pyt-contabilidad/pyt-app/src/resource/view/listEmpresa.fxml
+++ b/pyt-contabilidad/pyt-app/src/resource/view/listEmpresa.fxml
@@ -1,79 +1,90 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.*?>
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.control.cell.*?>
+<?import javafx.scene.control.cell.PropertyValueFactory?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.*?>
-<?import javafx.scene.control.cell.PropertyValueFactory?>
 
-<VBox xmlns:fx="http://javafx.com/fxml/1"
-	xmlns="http://javafx.com/javafx/2.2" fx:controller="org.pyt.app.beans.EmpresaBean">
-	<!-- TODO Add Nodes -->
-	<children>
-		<AnchorPane prefHeight="536.0" prefWidth="538.0">
-			<children>
-				<BorderPane layoutX="0.0" layoutY="0.0"
-					prefHeight="536.0" prefWidth="538.0">
-					<center>
-						<TableView fx:id="lsEmpresa"
-							editable="false" prefHeight="200.0" prefWidth="200.0"
-							tableMenuButtonVisible="false">
-							<columns>
-								<TableColumn prefWidth="75.0" text="#" > 
-									<cellValueFactory>
-										<PropertyValueFactory property="codigo"/>
-									</cellValueFactory>
-								</TableColumn>
-								<TableColumn prefWidth="75.0" text="Nombre" >
-									<cellValueFactory>
-										<PropertyValueFactory property="nombre"/>
-									</cellValueFactory>
-								</TableColumn>
-								<TableColumn prefWidth="75.0" text="Digito" >
-									<cellValueFactory>
-										<PropertyValueFactory property="digitoVerificacion"/>
-									</cellValueFactory>
-								</TableColumn>
-								<TableColumn prefWidth="75.0" text="Email" >
-									<cellValueFactory>
-										<PropertyValueFactory property="nit"/>
-									</cellValueFactory>
-								</TableColumn>
-								<TableColumn prefWidth="75.0" text="Telefono">
-									<cellValueFactory>
-										<PropertyValueFactory property="telefono"/>
-									</cellValueFactory>
-								</TableColumn>
-								<TableColumn prefWidth="75.0" text="Direccion" > 
-									<cellValueFactory>
-										<PropertyValueFactory property="direccion"/>
-									</cellValueFactory>
-								</TableColumn>
-								
-							</columns>
-						</TableView>
-					</center>
-					<top>
-						<TitledPane animated="false" prefHeight="63.0"
-							prefWidth="538.0" text="Emprpesa" textAlignment="RIGHT">
-							<content>
-								<AnchorPane id="Content" minHeight="0.0"
-									minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-									<children>
-										<Label layoutX="14.0" layoutY="11.0"
-											text="Listado de Empresas">
-											<font>
-												<Font size="20.0" />
-											</font>
-										</Label>
-									</children>
-								</AnchorPane>
-							</content>
-						</TitledPane>
-					</top>
-				</BorderPane>
-			</children>
-		</AnchorPane>
-	</children>
+<VBox xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="org.pyt.app.beans.EmpresaBean">
+  <!-- TODO Add Nodes -->
+  <children>
+    <AnchorPane prefHeight="536.0" prefWidth="538.0">
+      <children>
+        <BorderPane layoutX="0.0" layoutY="0.0" prefHeight="536.0" prefWidth="538.0">
+          <bottom>
+            <FlowPane alignment="CENTER" prefHeight="37.0" prefWidth="538.0">
+              <children>
+                <Button mnemonicParsing="false" text="Agregar"  onAction="#add"/>
+                <Button mnemonicParsing="false" text="Modificar" onAction="#set"/>
+                <Button mnemonicParsing="false" text="Eliminar" onAction="#del"/>
+              </children>
+            </FlowPane>
+          </bottom>
+          <center>
+            <TableView fx:id="lsEmpresa" editable="false" prefHeight="200.0" prefWidth="200.0" tableMenuButtonVisible="false" >
+              <columns>
+                <TableColumn prefWidth="75.0" text="#">
+                  <cellValueFactory>
+                    <PropertyValueFactory property="codigo" />
+                  </cellValueFactory>
+                </TableColumn>
+                <TableColumn prefWidth="75.0" text="Nombre">
+                  <cellValueFactory>
+                    <PropertyValueFactory property="nombre" />
+                  </cellValueFactory>
+                </TableColumn>
+                <TableColumn prefWidth="75.0" text="Digito">
+                  <cellValueFactory>
+                    <PropertyValueFactory property="digitoVerificacion" />
+                  </cellValueFactory>
+                </TableColumn>
+                <TableColumn prefWidth="75.0" text="Email">
+                  <cellValueFactory>
+                    <PropertyValueFactory property="nit" />
+                  </cellValueFactory>
+                </TableColumn>
+                <TableColumn prefWidth="75.0" text="Telefono">
+                  <cellValueFactory>
+                    <PropertyValueFactory property="telefono" />
+                  </cellValueFactory>
+                </TableColumn>
+                <TableColumn prefWidth="75.0" text="Direccion">
+                  <cellValueFactory>
+                    <PropertyValueFactory property="direccion" />
+                  </cellValueFactory>
+                </TableColumn>
+              </columns>
+            </TableView>
+          </center>
+          <top>
+            <GridPane cache="false" depthTest="INHERIT" mouseTransparent="false" pickOnBounds="true" prefWidth="512.0">
+              <children>
+                <Label alignment="CENTER_LEFT" prefHeight="22.0" prefWidth="121.0" text="Código" textAlignment="LEFT" wrapText="true" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+                <Label prefHeight="27.0" prefWidth="96.0" text="Nombre" wrapText="true" GridPane.columnIndex="2" GridPane.rowIndex="0" />
+                <Label prefHeight="23.0" text="Correo Electrónico" wrapText="true" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+                <TextField prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                <TextField prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="0" />
+                <TextField prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <Button mnemonicParsing="false" text="Buscar" GridPane.columnIndex="2" GridPane.rowIndex="1" onAction="#search"/>
+              </children>
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="135.0" minWidth="10.0" prefWidth="129.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="150.0" minWidth="10.0" prefWidth="141.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="131.0" minWidth="10.0" prefWidth="96.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="205.0" minWidth="10.0" prefWidth="172.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+            </GridPane>
+          </top>
+        </BorderPane>
+      </children>
+    </AnchorPane>
+  </children>
 </VBox>
