--- a/pyt-contabilidad/pyt-app/src/resource/view/listEmpresa.fxml
+++ b/pyt-contabilidad/pyt-app/src/resource/view/listEmpresa.fxml
@@ -9,24 +9,35 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
 
-<BorderPane layoutX="0.0" layoutY="0.0" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.pyt.app.beans.EmpresaBean">
+<BorderPane layoutX="0.0" layoutY="0.0"
+	maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
+	style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8"
+	xmlns:fx="http://javafx.com/fxml/1"
+	fx:controller="org.pyt.app.beans.EmpresaBean">
 	<bottom>
 		<FlowPane alignment="CENTER" BorderPane.alignment="CENTER">
 			<children>
-				<Button mnemonicParsing="false" onAction="#add" text="Agregar" />
-				<Button mnemonicParsing="false" onAction="#set" text="Modificar">
-               <FlowPane.margin>
-                  <Insets left="10.0" right="10.0" />
-               </FlowPane.margin></Button>
-				<Button mnemonicParsing="false" onAction="#del" text="Eliminar" />
+				<Button mnemonicParsing="false" onAction="#add"
+					text="Agregar" />
+				<Button mnemonicParsing="false" onAction="#set" fx:id="btnMod" visible="false"
+					text="Modificar">
+					<FlowPane.margin>
+						<Insets left="10.0" right="10.0" />
+					</FlowPane.margin>
+				</Button>
+				<Button mnemonicParsing="false" onAction="#del"
+					text="Eliminar" />
 			</children>
-         <padding>
-            <Insets bottom="5.0" top="5.0" />
-         </padding>
+			<padding>
+				<Insets bottom="5.0" top="5.0" />
+			</padding>
 		</FlowPane>
 	</bottom>
 	<center>
-		<TableView fx:id="lsEmpresa" editable="false" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" tableMenuButtonVisible="false" BorderPane.alignment="CENTER">
+		<TableView fx:id="lsEmpresa" editable="false" 
+			maxHeight="1.7976931348623157E308" maxWidth="-Infinity"
+			minHeight="-Infinity" minWidth="-Infinity"
+			tableMenuButtonVisible="false" BorderPane.alignment="CENTER" onMouseClicked="#clickTable">
 			<columns>
 				<TableColumn prefWidth="75.0" text="#">
 					<cellValueFactory>
@@ -40,7 +51,8 @@
 				</TableColumn>
 				<TableColumn prefWidth="75.0" text="Digito">
 					<cellValueFactory>
-						<PropertyValueFactory property="digitoVerificacion" />
+						<PropertyValueFactory
+							property="digitoVerificacion" />
 					</cellValueFactory>
 				</TableColumn>
 				<TableColumn prefWidth="75.0" text="Email">
@@ -59,62 +71,90 @@
 					</cellValueFactory>
 				</TableColumn>
 			</columns>
-         <BorderPane.margin>
-            <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
-         </BorderPane.margin>
+			<BorderPane.margin>
+				<Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+			</BorderPane.margin>
 		</TableView>
 	</center>
 	<top>
-		<GridPane cache="false" depthTest="INHERIT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mouseTransparent="false" pickOnBounds="true" prefWidth="512.0" BorderPane.alignment="CENTER">
+		<GridPane cache="false" depthTest="INHERIT"
+			maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+			minWidth="-Infinity" mouseTransparent="false" pickOnBounds="true"
+			prefWidth="512.0" BorderPane.alignment="CENTER">
 			<children>
-				<Label alignment="CENTER_LEFT" prefHeight="22.0" prefWidth="121.0" text="Código" textAlignment="LEFT" wrapText="true" GridPane.rowIndex="1">
-               <GridPane.margin>
-                  <Insets bottom="5.0" top="5.0" />
-               </GridPane.margin></Label>
-				<Label prefHeight="27.0" prefWidth="96.0" text="Nombre" wrapText="true" GridPane.columnIndex="2" GridPane.rowIndex="1">
-               <GridPane.margin>
-                  <Insets bottom="5.0" left="10.0" top="5.0" />
-               </GridPane.margin></Label>
-				<Label prefHeight="23.0" text="Correo Electrónico" wrapText="true" GridPane.rowIndex="2">
-               <GridPane.margin>
-                  <Insets bottom="5.0" top="5.0" />
-               </GridPane.margin></Label>
-				<TextField fx:id="codigo" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
-               <GridPane.margin>
-                  <Insets bottom="5.0" top="5.0" />
-               </GridPane.margin></TextField>
-				<TextField fx:id="nombre" prefWidth="200.0" GridPane.columnIndex="3" GridPane.rowIndex="1">
-               <GridPane.margin>
-                  <Insets bottom="5.0" right="5.0" top="5.0" />
-               </GridPane.margin></TextField>
-				<TextField fx:id="email" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
-               <GridPane.margin>
-                  <Insets bottom="5.0" top="5.0" />
-               </GridPane.margin></TextField>
-				<Button mnemonicParsing="false" onAction="#search" text="Buscar" GridPane.columnIndex="2" GridPane.rowIndex="2">
-               <GridPane.margin>
-                  <Insets bottom="5.0" left="10.0" top="5.0" />
-               </GridPane.margin></Button>
-            <Label alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Listado de Empresas" textAlignment="CENTER" GridPane.columnSpan="4">
-               <font>
-                  <Font name="System Bold Italic" size="18.0" />
-               </font>
-            </Label>
+				<Label alignment="CENTER_LEFT" prefHeight="22.0"
+					prefWidth="121.0" text="Código" textAlignment="LEFT"
+					wrapText="true" GridPane.rowIndex="1">
+					<GridPane.margin>
+						<Insets bottom="5.0" top="5.0" />
+					</GridPane.margin>
+				</Label>
+				<Label prefHeight="27.0" prefWidth="96.0" text="Nombre"
+					wrapText="true" GridPane.columnIndex="2" GridPane.rowIndex="1">
+					<GridPane.margin>
+						<Insets bottom="5.0" left="10.0" top="5.0" />
+					</GridPane.margin>
+				</Label>
+				<Label prefHeight="23.0" text="Correo Electrónico"
+					wrapText="true" GridPane.rowIndex="2">
+					<GridPane.margin>
+						<Insets bottom="5.0" top="5.0" />
+					</GridPane.margin>
+				</Label>
+				<TextField fx:id="codigo" prefWidth="200.0"
+					GridPane.columnIndex="1" GridPane.rowIndex="1">
+					<GridPane.margin>
+						<Insets bottom="5.0" top="5.0" />
+					</GridPane.margin>
+				</TextField>
+				<TextField fx:id="nombre" prefWidth="200.0"
+					GridPane.columnIndex="3" GridPane.rowIndex="1">
+					<GridPane.margin>
+						<Insets bottom="5.0" right="5.0" top="5.0" />
+					</GridPane.margin>
+				</TextField>
+				<TextField fx:id="email" prefWidth="200.0"
+					GridPane.columnIndex="1" GridPane.rowIndex="2">
+					<GridPane.margin>
+						<Insets bottom="5.0" top="5.0" />
+					</GridPane.margin>
+				</TextField>
+				<Button mnemonicParsing="false" onAction="#search"
+					text="Buscar" GridPane.columnIndex="2" GridPane.rowIndex="2">
+					<GridPane.margin>
+						<Insets bottom="5.0" left="10.0" top="5.0" />
+					</GridPane.margin>
+				</Button>
+				<Label alignment="CENTER" contentDisplay="CENTER"
+					maxHeight="1.7976931348623157E308"
+					maxWidth="1.7976931348623157E308" text="Listado de Empresas"
+					textAlignment="CENTER" GridPane.columnSpan="4">
+					<font>
+						<Font name="System Bold Italic" size="18.0" />
+					</font>
+				</Label>
 			</children>
 			<columnConstraints>
-				<ColumnConstraints hgrow="SOMETIMES" maxWidth="135.0" minWidth="10.0" prefWidth="129.0" />
-				<ColumnConstraints hgrow="SOMETIMES" maxWidth="150.0" minWidth="10.0" prefWidth="141.0" />
-				<ColumnConstraints hgrow="SOMETIMES" maxWidth="131.0" minWidth="10.0" prefWidth="96.0" />
-				<ColumnConstraints hgrow="SOMETIMES" maxWidth="205.0" minWidth="10.0" prefWidth="172.0" />
+				<ColumnConstraints hgrow="SOMETIMES"
+					maxWidth="135.0" minWidth="10.0" prefWidth="129.0" />
+				<ColumnConstraints hgrow="SOMETIMES"
+					maxWidth="150.0" minWidth="10.0" prefWidth="141.0" />
+				<ColumnConstraints hgrow="SOMETIMES"
+					maxWidth="131.0" minWidth="10.0" prefWidth="96.0" />
+				<ColumnConstraints hgrow="SOMETIMES"
+					maxWidth="205.0" minWidth="10.0" prefWidth="172.0" />
 			</columnConstraints>
 			<rowConstraints>
-            <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-				<RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-				<RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+				<RowConstraints maxHeight="30.0" minHeight="10.0"
+					prefHeight="30.0" vgrow="SOMETIMES" />
+				<RowConstraints maxHeight="30.0" minHeight="10.0"
+					prefHeight="30.0" vgrow="SOMETIMES" />
+				<RowConstraints maxHeight="30.0" minHeight="10.0"
+					prefHeight="30.0" vgrow="SOMETIMES" />
 			</rowConstraints>
-         <BorderPane.margin>
-            <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
-         </BorderPane.margin>
+			<BorderPane.margin>
+				<Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
+			</BorderPane.margin>
 		</GridPane>
 	</top>
 </BorderPane>
