dev Se configura los nuevos archivos de banco,parametros y formularios dinamicos.

--- a/pyt-contabilidad/pyt-app/src/resource/view/banco/banco.fxml
+++ b/pyt-contabilidad/pyt-app/src/resource/view/banco/banco.fxml
@@ -5,6 +5,7 @@
 <?import javafx.geometry.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.*?>
