--- a/pyt-contabilidad/pyt-app/src/resource/view/dinamico/panel.fxml
+++ b/pyt-contabilidad/pyt-app/src/resource/view/dinamico/panel.fxml
@@ -9,7 +9,7 @@
 	fx:controller="org.pyt.app.beans.dinamico.PanelBean">
 	<!-- TODO Add Nodes -->
 	<center>
-		<VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0"
+		<VBox fx:id="central" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="200.0"
 			prefWidth="100.0" BorderPane.alignment="TOP_CENTER">
 			<padding>
 				<Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
