--- a/pyt-contabilidad/pyt-app/src/resource/view/centroCosto/listCentroCosto.fxml
+++ b/pyt-contabilidad/pyt-app/src/resource/view/centroCosto/listCentroCosto.fxml
@@ -71,11 +71,7 @@
 								<PropertyValueFactory property="orden" />
 							</cellValueFactory>
 						</TableColumn>
-						<TableColumn prefWidth="75.0" text="Estado">
-							<cellValueFactory>
-								<PropertyValueFactory property="estado" />
-							</cellValueFactory>
-						</TableColumn>
+						<TableColumn fx:id="estados" prefWidth="75.0" text="Estado"/>
 					</columns>
 					<BorderPane.margin>
 						<Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
