--- a/pyt-contabilidad/pyt-app/src/resource/view/banco/listBanco.fxml
+++ b/pyt-contabilidad/pyt-app/src/resource/view/banco/listBanco.fxml
@@ -66,17 +66,9 @@
 								<PropertyValueFactory property="descripcion" />
 							</cellValueFactory>
 						</TableColumn>
-						<TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="120.0" text="Tipo de Banco">
-							<cellValueFactory>
-								<PropertyValueFactory property="base" />
-							</cellValueFactory>
-						</TableColumn>
-						<TableColumn prefWidth="120.0" text="TIpo de Cuenta">
-							<cellValueFactory>
-								<PropertyValueFactory property="tarifa" />
-							</cellValueFactory>
-						</TableColumn>
-						<TableColumn prefWidth="80.0" text="Estado" />
+						<TableColumn fx:id="tipoBancos" maxWidth="5000.0" minWidth="10.0" prefWidth="120.0" text="Tipo de Banco"/>
+						<TableColumn fx:id="tipoCuentas" prefWidth="120.0" text="Tipo de Cuenta"/>
+						<TableColumn fx:id="estados" prefWidth="80.0" text="Estado" />
 					</columns>
 					<BorderPane.margin>
 						<Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
