--- a/pyt-contabilidad/pyt-app/src/resource/view/persona/listTrabajador.fxml
+++ b/pyt-contabilidad/pyt-app/src/resource/view/persona/listTrabajador.fxml
@@ -52,31 +52,11 @@
       <center>
         <TableView fx:id="tabla" editable="false" maxHeight="1.7976931348623157E308" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#clickTable" tableMenuButtonVisible="false" BorderPane.alignment="CENTER">
           <columns>
-            <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="96.0" text="Documento">
-              <cellValueFactory>
-                <PropertyValueFactory property="documento" />
-              </cellValueFactory>
-            </TableColumn>
-            <TableColumn prefWidth="75.0" text="Nombre">
-              <cellValueFactory>
-                <PropertyValueFactory property="nombre" />
-              </cellValueFactory>
-            </TableColumn>
-            <TableColumn prefWidth="75.0" text="Apellidos">
-              <cellValueFactory>
-                <PropertyValueFactory property="apellidos" />
-              </cellValueFactory>
-            </TableColumn>
-            <TableColumn prefWidth="75.0" text="Email">
-              <cellValueFactory>
-                <PropertyValueFactory property="email" />
-              </cellValueFactory>
-            </TableColumn>
-            <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="133.0" text="Fecha Nacimiento">
-              <cellValueFactory>
-                <PropertyValueFactory property="fechaNacimiento" />
-              </cellValueFactory>
-            </TableColumn>
+            <TableColumn fx:id="cedula" maxWidth="5000.0" minWidth="10.0" prefWidth="96.0" text="Documento"/>
+            <TableColumn fx:id="nombre" prefWidth="75.0" text="Nombre"/>
+            <TableColumn fx:id="apellido" prefWidth="75.0" text="Apellidos"/>
+            <TableColumn fx:id="email" prefWidth="75.0" text="Email"/>
+            <TableColumn fx:id="fechaNacimiento" maxWidth="5000.0" minWidth="10.0" prefWidth="133.0" text="Fecha Nacimiento"/>
             <TableColumn prefWidth="75.0" text="Estado">
               <cellValueFactory>
                 <PropertyValueFactory property="estado" />
