--- a/pyt-contabilidad/pyt-app/src/resource/view/persona/trabajador.fxml
+++ b/pyt-contabilidad/pyt-app/src/resource/view/persona/trabajador.fxml
@@ -1,100 +1,96 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import javafx.scene.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
 <?import java.lang.*?>
+<?import javafx.collections.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.*?>
 
-<BorderPane fx:id="pane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity"
-	prefWidth="489.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
-	fx:controller="org.pyt.app.beans.trabajador.TrabajadorCRUBean">
-	<bottom>
-		<FlowPane alignment="CENTER" columnHalignment="CENTER" prefHeight="0.0" prefWidth="489.0" BorderPane.alignment="CENTER">
-			<children>
-				<Button mnemonicParsing="false" onAction="#add" text="Guardar" />
-				<Button mnemonicParsing="false" onAction="#cancel" text="Cancelar">
-					<FlowPane.margin>
-						<Insets left="10.0" />
-					</FlowPane.margin>
-				</Button>
-			</children>
-			<BorderPane.margin>
-				<Insets bottom="5.0" top="5.0" />
-			</BorderPane.margin>
-		</FlowPane>
-	</bottom>
-	<center>
-		<GridPane alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="285.0"
-			prefWidth="469.0" BorderPane.alignment="CENTER">
-			<columnConstraints>
-				<ColumnConstraints hgrow="SOMETIMES" maxWidth="94.0" minWidth="10.0" prefWidth="77.0" />
-				<ColumnConstraints hgrow="SOMETIMES" maxWidth="175.0" minWidth="10.0" prefWidth="159.0" />
-				<ColumnConstraints hgrow="SOMETIMES" maxWidth="94.0" minWidth="10.0" prefWidth="67.0" />
-				<ColumnConstraints hgrow="SOMETIMES" maxWidth="167.0" minWidth="10.0" prefWidth="160.0" />
-			</columnConstraints>
-			<rowConstraints>
-				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-				<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-				<RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="27.0" vgrow="SOMETIMES" />
-				<RowConstraints maxHeight="50.0" minHeight="10.0" prefHeight="37.0" vgrow="SOMETIMES" />
-				<RowConstraints maxHeight="49.0" minHeight="10.0" prefHeight="46.0" vgrow="SOMETIMES" />
-			</rowConstraints>
-			<children>
-				<Label alignment="CENTER" prefHeight="29.0" prefWidth="70.0" text="Nombre" textAlignment="CENTER" GridPane.columnIndex="1"  GridPane.rowIndex="1"/>
-				<TextField fx:id="nombre" GridPane.columnIndex="2"   GridPane.rowIndex="1"/>
-				<Label alignment="CENTER" prefHeight="29.0" prefWidth="70.0" text="Apellido" textAlignment="CENTER" GridPane.columnIndex="3"   GridPane.rowIndex="1"/>
-				<TextField fx:id="apellido" GridPane.columnIndex="4"   GridPane.rowIndex="1"/>
-				<Label alignment="CENTER" prefHeight="31.0" prefWidth="90.0" text="Tipo Documento" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-				<ChoiceBox fx:id="tipoDocumentos" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-				<Label alignment="CENTER" prefHeight="31.0" prefWidth="90.0" text="Documento" GridPane.columnIndex="3" GridPane.rowIndex="2" />
-				<TextField fx:id="documento" GridPane.columnIndex="4" GridPane.rowIndex="2" />
-				<Label alignment="CENTER" prefHeight="31.0" prefWidth="87.0" text="Telefono" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-				<TextField fx:id="telefono" GridPane.columnIndex="2" GridPane.rowIndex="3" />
-				<Label alignment="CENTER" prefHeight="27.0" prefWidth="90.0" text="Direccion" GridPane.columnIndex="3" GridPane.rowIndex="3" />
-				<TextField fx:id="direccion" GridPane.columnIndex="4" GridPane.rowIndex="3" />
-				<Label alignment="CENTER" prefHeight="27.0" prefWidth="75.0" text="Email" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-				<TextField fx:id="email" GridPane.columnIndex="2" GridPane.rowIndex="4" />
-				<Label alignment="CENTER" prefHeight="31.0" prefWidth="90.0" text="Tipo de Pago" GridPane.columnIndex="3" GridPane.rowIndex="4" />
-				<ChoiceBox fx:id="tipoPagos" GridPane.columnIndex="4" GridPane.rowIndex="4" />
-				<Label alignment="CENTER" prefHeight="27.0" prefWidth="75.0" text="Fecha de Nacimiento" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-				<DatePicker fx:id="fechaNacimiento" GridPane.columnIndex="2" GridPane.rowIndex="5" />
-				<Label alignment="CENTER" prefHeight="31.0" prefWidth="90.0" text="Centro de Costos" GridPane.columnIndex="3" GridPane.rowIndex="5" />
-				<ChoiceBox fx:id="centroCostos" GridPane.columnIndex="4" GridPane.rowIndex="5" />
-				<Label alignment="CENTER" prefHeight="27.0" prefWidth="75.0" text="Fecha de Ingreso" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-				<DatePicker fx:id="fechaIngreso" GridPane.columnIndex="2" GridPane.rowIndex="6" />
-				<Label alignment="CENTER" prefHeight="27.0" prefWidth="75.0" text="Fecha de Retiro" GridPane.columnIndex="3" GridPane.rowIndex="6" />
-				<DatePicker fx:id="fechaRetiro" GridPane.columnIndex="4" GridPane.rowIndex="6" />
-
-			</children>
-			<BorderPane.margin>
-				<Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-			</BorderPane.margin>
-			<padding>
-				<Insets bottom="10.0" />
-			</padding>
-		</GridPane>
-	</center>
-	<cursor>
-		<Cursor fx:constant="DEFAULT" />
-	</cursor>
-	<top>
-		<FlowPane alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
-			<children>
-				<Label fx:id="titulo" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308"
-					text="Empleado" textAlignment="CENTER">
-					<font>
-						<Font name="System Bold Italic" size="18.0" />
-					</font>
-				</Label>
-			</children>
-			<BorderPane.margin>
-				<Insets bottom="5.0" top="5.0" />
-			</BorderPane.margin>
-		</FlowPane>
-	</top>
+<BorderPane fx:id="pane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefWidth="538.0" style="-fx-background-color: white;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="org.pyt.app.beans.trabajador.TrabajadorCRUBean">
+  <bottom>
+    <FlowPane alignment="CENTER" columnHalignment="CENTER" prefHeight="0.0" prefWidth="489.0" BorderPane.alignment="CENTER">
+      <children>
+        <Button mnemonicParsing="false" onAction="#add" text="Guardar" />
+        <Button mnemonicParsing="false" onAction="#cancel" text="Cancelar">
+          <FlowPane.margin>
+            <Insets left="10.0" />
+          </FlowPane.margin>
+        </Button>
+      </children>
+      <BorderPane.margin>
+        <Insets bottom="5.0" top="5.0" />
+      </BorderPane.margin>
+    </FlowPane>
+  </bottom>
+  <center>
+    <GridPane alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="285.0" prefWidth="489.0" BorderPane.alignment="CENTER">
+      <children>
+        <Label alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="29.0" prefWidth="70.0" text="Nombre" textAlignment="CENTER" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+        <TextField fx:id="nombre" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+        <Label alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="29.0" prefWidth="70.0" text="Apellido" textAlignment="CENTER" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+        <TextField fx:id="apellido" GridPane.columnIndex="3" GridPane.rowIndex="1" />
+        <Label alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="31.0" prefWidth="90.0" text="Tipo Documento" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+        <ChoiceBox fx:id="tipoDocumentos" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+        <Label alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="31.0" prefWidth="90.0" text="Documento" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+        <TextField fx:id="documento" GridPane.columnIndex="3" GridPane.rowIndex="2" />
+        <Label alignment="CENTER" prefHeight="31.0" prefWidth="87.0" text="Telefono" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+        <TextField fx:id="telefono" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+        <Label alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="27.0" prefWidth="90.0" text="Direccion" GridPane.columnIndex="2" GridPane.rowIndex="3" />
+        <TextField fx:id="direccion" GridPane.columnIndex="3" GridPane.rowIndex="3" />
+        <Label alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="27.0" prefWidth="75.0" text="Email" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+        <TextField fx:id="email" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+        <Label alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="31.0" prefWidth="90.0" text="Tipo de Pago" GridPane.columnIndex="2" GridPane.rowIndex="4" />
+        <ChoiceBox fx:id="tipoPagos" maxWidth="1.7976931348623157E308" GridPane.columnIndex="3" GridPane.rowIndex="4" />
+        <DatePicker fx:id="fechaNacimiento" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+        <Label alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="31.0" prefWidth="90.0" text="Centro de Costos" GridPane.columnIndex="2" GridPane.rowIndex="5" />
+        <ChoiceBox fx:id="centroCostos" maxWidth="1.7976931348623157E308" GridPane.columnIndex="3" GridPane.rowIndex="5" />
+        <Label alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="27.0" prefWidth="75.0" text="Fecha de Ingreso" GridPane.columnIndex="0" GridPane.rowIndex="6" />
+        <DatePicker fx:id="fechaIngreso" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+        <Label alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="27.0" prefWidth="75.0" text="Fecha de Retiro" GridPane.columnIndex="2" GridPane.rowIndex="6" />
+        <DatePicker fx:id="fechaRetiro" GridPane.columnIndex="3" GridPane.rowIndex="6" />
+        <Label alignment="CENTER" maxWidth="1.7976931348623157E308" prefHeight="27.0" prefWidth="75.0" text="Fecha de Nacimiento" underline="false" wrapText="true" GridPane.columnIndex="0" GridPane.rowIndex="7" />
+        <Label alignment="CENTER" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" text="Estado" textAlignment="CENTER" GridPane.columnIndex="0" GridPane.rowIndex="5" />
+        <ChoiceBox fx:id="estados" maxWidth="1.7976931348623157E308" GridPane.columnIndex="1" GridPane.rowIndex="5"/>
+      </children>
+      <columnConstraints>
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="175.0" minWidth="10.0" prefWidth="138.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="125.0" minWidth="10.0" prefWidth="117.0" />
+        <ColumnConstraints hgrow="SOMETIMES" maxWidth="167.0" minWidth="10.0" prefWidth="121.0" />
+        <ColumnConstraints maxWidth="134.0" prefWidth="113.0" />
+      </columnConstraints>
+      <padding>
+        <Insets bottom="10.0" />
+      </padding>
+      <rowConstraints>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="30.0" minHeight="10.0" prefHeight="27.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="50.0" minHeight="10.0" prefHeight="37.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="49.0" minHeight="10.0" prefHeight="46.0" vgrow="SOMETIMES" />
+        <RowConstraints maxHeight="49.0" minHeight="10.0" prefHeight="46.0" vgrow="SOMETIMES" />
+      </rowConstraints>
+      <BorderPane.margin>
+        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+      </BorderPane.margin>
+    </GridPane>
+  </center>
+  <top>
+    <FlowPane alignment="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" BorderPane.alignment="CENTER">
+      <children>
+        <Label fx:id="titulo" alignment="CENTER" contentDisplay="CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" text="Empleado" textAlignment="CENTER">
+          <font>
+            <Font name="System Bold Italic" size="18.0" />
+          </font>
+        </Label>
+      </children>
+      <BorderPane.margin>
+        <Insets bottom="5.0" top="5.0" />
+      </BorderPane.margin>
+    </FlowPane>
+  </top>
 </BorderPane>
