dev Se termina de agregar las tareas y comportamientos de los detalles de los docuemtnos d¿inamicos y se agrega una nueva pantalla para mejo de cuentas contables

--- a/pyt-contabilidad/pyt-app/src/resource/view/dinamico/detalleConcepto.fxml
+++ b/pyt-contabilidad/pyt-app/src/resource/view/dinamico/detalleConcepto.fxml
@@ -18,7 +18,7 @@
 						<Insets right="10.0" />
 					</HBox.margin>
 				</Button>
-				<Button mnemonicParsing="false" onAction="#cancelar" text="Cancelar" />
+				<Button mnemonicParsing="false" onAction="#regresar" text="Regresar" />
 			</children>
 		</HBox>
 	</bottom>
