--- a/pyt-contabilidad/pyt-app/src/resource/view/dinamico/detalleContable.fxml
+++ b/pyt-contabilidad/pyt-app/src/resource/view/dinamico/detalleContable.fxml
@@ -18,7 +18,7 @@
 						<Insets right="10.0" />
 					</HBox.margin>
 				</Button>
-				<Button mnemonicParsing="false" onAction="#cancelar" text="Cancelar" />
+				<Button mnemonicParsing="false" onAction="#regresar" text="Regresar" />
 			</children>
 		</HBox>
 	</bottom>
